syntax = "proto3";

package modvalidationmultisign;

import "koinos/options.proto";

message account_id {
   bytes value = 1 [(koinos.btype) = ADDRESS];
}

message config_storage {
   repeated uint32 only_entry_points = 1;
   uint32 threshold = 2;
}

message add_only_entry_point_args {
   uint32 entry_point = 1;
}

message remove_only_entry_point_args {
  uint32 entry_point = 1;
}

message get_only_entry_points_result {
  repeated uint32 value = 1;
}

message set_threshold {
   uint32 value = 1;
}

message get_threshold {
   uint32 value = 1;
}

message guardian {
   bytes address = 1 [(koinos.btype) = ADDRESS];
}

message guardians {
   repeated guardian guardians = 1;
}

message add_guardian_args {
   bytes user = 1 [(koinos.btype) = ADDRESS];
   bytes address = 2 [(koinos.btype) = ADDRESS];
}

message add_guardian_result {
}

message remove_guardian_args {
   bytes user = 1 [(koinos.btype) = ADDRESS];
   bytes address = 2 [(koinos.btype) = ADDRESS];
}

message remove_guardian_result {
}

message get_guardians_args {
   bytes user = 1 [(koinos.btype) = ADDRESS];
}

message get_guardians_result {
   repeated guardian value = 1;
}